Custom--app/main/default/objects/Rehab__c/Rehab__c.object-meta.xml
<CustomObject>
    <description>This is the central record for the Rehab deployment.  Tracks all key details relating to the Rehab process.</description>
    <label>Rehab</label>
    <nameField>
        <displayFormat>RHB-{0000}</displayFormat>
        <label>Rehab Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rehabs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>