Custom--app/main/default/objects/Rehab__c/fields/Access_Date__c.field-meta.xml
<CustomField>
    <fullName>Access_Date__c</fullName>
    <label>Access Date</label>
    <type>Date</type>
</CustomField>