Custom--app/main/default/objects/Rehab__c/fields/Acq_Reporting_Date__c.field-meta.xml
<CustomField>
    <fullName>Acq_Reporting_Date__c</fullName>
    <formula>Portfolio__r.Reporting_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acq. Reporting Date</label>
    <type>Date</type>
</CustomField>