Custom--app/main/default/objects/Rehab__c/fields/Actual_Spend_Total__c.field-meta.xml
<CustomField>
    <fullName>Actual_Spend_Total__c</fullName>
    <label>Actual Spend Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>