Custom--app/main/default/objects/Rehab__c/fields/Actual_vs_Estimated__c.field-meta.xml
<CustomField>
    <fullName>Actual_vs_Estimated__c</fullName>
    <formula>Office_Signoff_Date__c  -  GC_Completion_Date_Est__c</formula>
    <inlineHelpText>This calculation represents the # days between the Actual Completion date (Office Sign-Off Date) and the GC Estimated Completion Date.</inlineHelpText>
    <label># Days Actual vs. Estimated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>