Custom--app/main/default/objects/Rehab__c/fields/Additional_Work_Needed__c.field-meta.xml
<CustomField>
    <fullName>Additional_Work_Needed__c</fullName>
    <label>Additional Work Needed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>