Custom--app/main/default/objects/Rehab__c/fields/Alert_Locksmith__c.field-meta.xml
<CustomField>
    <fullName>Alert_Locksmith__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box will automatically send an alert to the locksmith with the property information. You will be cc:d on the email.  (Note: you must have a locksmith contact with a valid email address.)</inlineHelpText>
    <label>Alert Locksmith</label>
    <type>Checkbox</type>
</CustomField>