Custom--app/main/default/objects/Rehab__c/fields/Alert_Locksmith_Date_time__c.field-meta.xml
<CustomField>
    <fullName>Alert_Locksmith_Date_time__c</fullName>
    <description>This is the date/time that the alert locksmith checkbox was checked.</description>
    <label>Alert Locksmith Date/time</label>
    <type>DateTime</type>
</CustomField>