Custom--app/main/default/objects/Rehab__c/fields/All_Vendors_Added__c.field-meta.xml
<CustomField>
    <fullName>All_Vendors_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to confirm that you have completed the process of adding all direct vendors.  There should always be at least one (HVAC).</inlineHelpText>
    <label>All Vendors Added</label>
    <type>Checkbox</type>
</CustomField>