Custom--app/main/default/objects/Rehab__c/fields/App_Tracker__c.field-meta.xml
<CustomField>
    <fullName>App_Tracker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Application Tracker Record Fetched from Related Listing Of Rehab</description>
    <label>App Tracker</label>
    <referenceTo>Tenant_App__c</referenceTo>
    <relationshipLabel>Rehabs</relationshipLabel>
    <relationshipName>Rehabs</relationshipName>
    <type>Lookup</type>
</CustomField>