Custom--app/main/default/objects/Rehab__c/fields/Back_End_Super_is_Me__c.field-meta.xml
<CustomField>
    <fullName>Back_End_Super_is_Me__c</fullName>
    <formula>IF( $User.Id =  Back_end_Supervisor__r.Id , 'Yes', 'No')</formula>
    <label>Back-End Super is Me</label>
    <type>Text</type>
</CustomField>