Custom--app/main/default/objects/Rehab__c/fields/Back_End_Super_Phone__c.field-meta.xml
<CustomField>
    <fullName>Back_End_Super_Phone__c</fullName>
    <formula>Back_end_Supervisor__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Back-End Super Phone</label>
    <type>Text</type>
</CustomField>