Custom--app/main/default/objects/Rehab__c/fields/Back_end_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Back_end_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Back-end Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Rehabs1</relationshipName>
    <type>Lookup</type>
</CustomField>