Custom--app/main/default/objects/Rehab__c/fields/Back_End_Supervisor_if_Different__c.field-meta.xml
<CustomField>
    <fullName>Back_End_Supervisor_if_Different__c</fullName>
    <label>Back End Supervisor (if Different)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>