Custom--app/main/default/objects/Rehab__c/fields/Bathrooms__c.field-meta.xml
<CustomField>
    <fullName>Bathrooms__c</fullName>
    <formula>Portfolio__r.Baths__c</formula>
    <label>Bathrooms</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>