Custom--app/main/default/objects/Rehab__c/fields/Before_Photo_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Before_Photo_Date_Time__c</fullName>
    <label>Before Photos Date Time</label>
    <type>DateTime</type>
</CustomField>