Custom--app/main/default/objects/Rehab__c/fields/BK_Status__c.field-meta.xml
<CustomField>
    <fullName>BK_Status__c</fullName>
    <formula>Portfolio__r.BK_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BK Status</label>
    <type>Text</type>
</CustomField>