Custom--app/main/default/objects/Rehab__c/fields/Budget_CM__c.field-meta.xml
<CustomField>
    <fullName>Budget_CM__c</fullName>
    <formula>HD_Budget_Walk__r.Budget_Construction_Manager__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a formula field which pulls in the name listed in the Budget Construction Manager field on the HD Budget Walk</inlineHelpText>
    <label>Budget CM</label>
    <type>Text</type>
</CustomField>