Custom--app/main/default/objects/Rehab__c/fields/Budget_Notes__c.field-meta.xml
<CustomField>
    <fullName>Budget_Notes__c</fullName>
    <label>Budget Notes</label>
    <type>TextArea</type>
</CustomField>