Custom--app/main/default/objects/Rehab__c/fields/Budget_Revised__c.field-meta.xml
<CustomField>
    <fullName>Budget_Revised__c</fullName>
    <inlineHelpText>This field should auto-populate for regions that are using the HD app.  This number will include sales tax.</inlineHelpText>
    <label>Revised Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>