Custom--app/main/default/objects/Rehab__c/fields/Budget_Revised_by__c.field-meta.xml
<CustomField>
    <fullName>Budget_Revised_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Revised by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Rehabs4</relationshipName>
    <type>Lookup</type>
</CustomField>