Custom--app/main/default/objects/Rehab__c/fields/Budget_Variance_Trend_New__c.field-meta.xml
<CustomField>
    <fullName>Budget_Variance_Trend_New__c</fullName>
    <formula>IF(AND( TODAY() -   Final_Budget_Date__c   >= 1,TODAY() -   Final_Budget_Date__c    &lt;=  30),"Last 30 Days",
IF(AND( TODAY() -   Final_Budget_Date__c   >= 1,TODAY() -   Final_Budget_Date__c    &lt;=  60),"Last 60 Days",
IF(AND( TODAY() -   Final_Budget_Date__c   >= 1,TODAY() -   Final_Budget_Date__c    &lt;=  90),"Last 90 Days",
null)))</formula>
    <label>Budget Revised Trend</label>
    <type>Text</type>
</CustomField>