Custom--app/main/default/objects/Rehab__c/fields/CA_Pre_Move_Out_Inspection_Assigned__c.field-meta.xml
<CustomField>
    <fullName>CA_Pre_Move_Out_Inspection_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre Move Out Inspection Assigned</label>
    <type>Checkbox</type>
</CustomField>