Custom--app/main/default/objects/Rehab__c/fields/CA_Pre_Move_Out_Inspection_Requested_Old__c.field-meta.xml
<CustomField>
    <fullName>CA_Pre_Move_Out_Inspection_Requested_Old__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field was recreated on Renewal as an editable field, and it was recreated on Rehab as a formula reflecting the Renewal field's value.</description>
    <inlineHelpText>This field was recreated on Renewal as an editable field, and it was recreated on Rehab as a formula reflecting the Renewal field's value.</inlineHelpText>
    <label>Pre Move Out Inspection Requested Old</label>
    <type>Checkbox</type>
</CustomField>