Custom--app/main/default/objects/Rehab__c/fields/CA_Pre_Move_Out_Inspection_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>CA_Pre_Move_Out_Inspection_Scheduled__c</fullName>
    <label>Pre Move Out Inspection Scheduled</label>
    <type>DateTime</type>
</CustomField>