Custom--app/main/default/objects/Rehab__c/fields/Check_Received__c.field-meta.xml
<CustomField>
    <fullName>Check_Received__c</fullName>
    <label>Check Received</label>
    <type>Date</type>
</CustomField>