Custom--app/main/default/objects/Rehab__c/fields/Check_Requested__c.field-meta.xml
<CustomField>
    <fullName>Check_Requested__c</fullName>
    <label>Check Requested</label>
    <type>Date</type>
</CustomField>