Custom--app/main/default/objects/Rehab__c/fields/Committed_Spend_Running_Total_TT__c.field-meta.xml
<CustomField>
    <fullName>Committed_Spend_Running_Total_TT__c</fullName>
    <label>Committed Spend Running Total (TT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>