Custom--app/main/default/objects/Rehab__c/fields/Condition_of_Roof__c.field-meta.xml
<CustomField>
    <fullName>Condition_of_Roof__c</fullName>
    <formula>TEXT(Portfolio__r.Condition_of_Roof__c)</formula>
    <label>Condition of Roof</label>
    <type>Text</type>
</CustomField>