Custom--app/main/default/objects/Rehab__c/fields/Contains_Seasonal_Items__c.field-meta.xml
<CustomField>
    <fullName>Contains_Seasonal_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contains Seasonal Items</label>
    <type>Checkbox</type>
</CustomField>