Custom--app/main/default/objects/Rehab__c/fields/Current_Lease_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Current_Lease_Term_Months__c</fullName>
    <formula>Renewal__r.Lease__r.Lease_Term__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Lease Term (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>