Custom--app/main/default/objects/Rehab__c/fields/Current_Lease_Type__c.field-meta.xml
<CustomField>
    <fullName>Current_Lease_Type__c</fullName>
    <formula>CASE(Renewal__r.Lease__r.Lease_Status__c,
"IH Initial Lease", "IH Initial Lease",
"IH Initial Lease Renewal", "IH Initial Lease Renewal",
"IH New Lease", "IH New Lease",
"IH New Lease Renewal", "IH New Lease Renewal",
"IH Renewal", "IH Renewal",
"TIP Cash for Keys", "TIP Cash for Keys",
"TIP Eviction", "TIP Eviction",
"TIP New Lease", "TIP New Lease",
"TIP Prior Owner Lease Honored", "TIP Prior Owner Lease Honored",
"TIP Renewal", "TIP Renewal",
Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Lease Type</label>
    <type>Text</type>
</CustomField>