Custom--app/main/default/objects/Rehab__c/fields/dataText_Contractor__c.field-meta.xml
<CustomField>
    <fullName>dataText_Contractor__c</fullName>
    <inlineHelpText>This is a temporary field to house the text string that came from the data load representing the GC assigned to this project.  We will be coordinating a project to associate this record to the appropriate record using the look-up field below.</inlineHelpText>
    <label>GC (text from data load)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>