Custom--app/main/default/objects/Rehab__c/fields/Date_Notify_GC_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Date_Notify_GC_Assignment__c</fullName>
    <description>This field is temporary.</description>
    <label>Date Notify GC Assignment (Temp)</label>
    <type>DateTime</type>
</CustomField>