Custom--app/main/default/objects/Rehab__c/fields/Date_PTL_Sent_to_PM__c.field-meta.xml
<CustomField>
    <fullName>Date_PTL_Sent_to_PM__c</fullName>
    <inlineHelpText>This field is populated to TODAY automatically when the "Send PTL to PM" field is checked.</inlineHelpText>
    <label>Date PTL Sent to PM</label>
    <type>Date</type>
</CustomField>