Custom--app/main/default/objects/Rehab__c/fields/Date_Rehab_Stage_Moved_to_QC_Ready__c.field-meta.xml
<CustomField>
    <fullName>Date_Rehab_Stage_Moved_to_QC_Ready__c</fullName>
    <label>Date Rehab Stage Moved to QC Ready</label>
    <type>Date</type>
</CustomField>