Custom--app/main/default/objects/Rehab__c/fields/Date_Time_Sent_to_Leasing__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Sent_to_Leasing__c</fullName>
    <label>Date/Time Sent to Leasing</label>
    <type>DateTime</type>
</CustomField>