Custom--app/main/default/objects/Rehab__c/fields/Days_Acquisition_to_Rekey__c.field-meta.xml
<CustomField>
    <fullName>Days_Acquisition_to_Rekey__c</fullName>
    <formula>Re_Key_Date__c  -  Acquisition_Date__c</formula>
    <inlineHelpText>Re-Key Date - Acquisition Date</inlineHelpText>
    <label># Days Acquisition to Rekey</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>