Custom--app/main/default/objects/Rehab__c/fields/Days_Actual_vs_Revised__c.field-meta.xml
<CustomField>
    <fullName>Days_Actual_vs_Revised__c</fullName>
    <formula>Office_Signoff_Date__c  -  GC_Completion_Date_Revised__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This calculation represents the # days between the Actual Completion date (Office Sign-Off Date) and the GC Revised Completion Date.</inlineHelpText>
    <label># Days Actual vs. Revised</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>