Custom--app/main/default/objects/Rehab__c/fields/Days_from_PMOI_to_Move_Out__c.field-meta.xml
<CustomField>
    <fullName>Days_from_PMOI_to_Move_Out__c</fullName>
    <formula>Move_Out_Date__c  -   DATEVALUE( CA_Pre_Move_Out_Inspection_Scheduled__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Days from PMOI to Move-Out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>