Custom--app/main/default/objects/Rehab__c/fields/Days_GC_Hands__c.field-meta.xml
<CustomField>
    <fullName>Days_GC_Hands__c</fullName>
    <formula>IF (ISBLANK( Office_Signoff_Date__c ) = TRUE,   TODAY() -  Start_Date__c ,   
IF (ISBLANK (Office_Signoff_Date__c) = FALSE,  Office_Signoff_Date__c  -  Start_Date__c, NULL))</formula>
    <label># Days GC Hands</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>