Custom--app/main/default/objects/Rehab__c/fields/Days_in_HOLD_Deed__c.field-meta.xml
<CustomField>
    <fullName>Days_in_HOLD_Deed__c</fullName>
    <label># Days in HOLD - Deed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>