Custom--app/main/default/objects/Rehab__c/fields/Days_in_HOLD_Noti_Revoked_Cancel_UT__c.field-meta.xml
<CustomField>
    <fullName>Days_in_HOLD_Noti_Revoked_Cancel_UT__c</fullName>
    <label># Days in HOLD - Noti. Revoked/Cancel UT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>