Custom--app/main/default/objects/Rehab__c/fields/Days_in_HOLD_Pending_Budget_Approval__c.field-meta.xml
<CustomField>
    <fullName>Days_in_HOLD_Pending_Budget_Approval__c</fullName>
    <label># Days in HOLD - Pending Budget Approval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>