Custom--app/main/default/objects/Rehab__c/fields/Days_in_HOLD_Personal_Property__c.field-meta.xml
<CustomField>
    <fullName>Days_in_HOLD_Personal_Property__c</fullName>
    <label># Days in HOLD - Personal Property</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>