Custom--app/main/default/objects/Rehab__c/fields/Days_in_Rekey_to_Comp__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Rekey_to_Comp__c</fullName>
    <formula>IF( RecordType.Name = 'Turn',
Office_Signoff_Date__c  -    Access_Date__c ,
Office_Signoff_Date__c  -   Re_Key_Date__c)</formula>
    <label># Days Rekey to Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>