Custom--app/main/default/objects/Rehab__c/fields/Days_Move_Out_to_Office_Sign_Off__c.field-meta.xml
<CustomField>
    <fullName>Days_Move_Out_to_Office_Sign_Off__c</fullName>
    <formula>Office_Signoff_Date__c -  Move_Out_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Days Move Out to Office Sign Off</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>