Custom--app/main/default/objects/Rehab__c/fields/Days_Move_Out_to_Rekey__c.field-meta.xml
<CustomField>
    <fullName>Days_Move_Out_to_Rekey__c</fullName>
    <formula>Re_Key_Date__c - Move_Out_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Days Move Out to Rekey</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>