Custom--app/main/default/objects/Rehab__c/fields/Days_Photos_to_Final_Budget__c.field-meta.xml
<CustomField>
    <fullName>Days_Photos_to_Final_Budget__c</fullName>
    <formula>Final_Budget_Date__c - DATEVALUE(Before_Photo_Date_Time__c)</formula>
    <label># Days Photos to Final Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>