Custom--app/main/default/objects/Rehab__c/fields/Days_Rekey_to_Budget__c.field-meta.xml
<CustomField>
    <fullName>Days_Rekey_to_Budget__c</fullName>
    <formula>IF( RecordType.Name = 'Turn',
Final_Budget_Date__c -   Access_Date__c ,
Final_Budget_Date__c -  Re_Key_Date__c)</formula>
    <label># Days Rekey to Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>