Custom--app/main/default/objects/Rehab__c/fields/Days_to_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Delivery__c</fullName>
    <formula>GC_Completion_Date_Est__c-Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Days to Delivery</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>