Custom--app/main/default/objects/Rehab__c/fields/Days_to_Revised_GC_Completion__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Revised_GC_Completion__c</fullName>
    <formula>GC_Completion_Date_Revised__c  -  TODAY()</formula>
    <label># Days to Revised GC Completion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>