Custom--app/main/default/objects/Rehab__c/fields/Deed_Status__c.field-meta.xml
<CustomField>
    <fullName>Deed_Status__c</fullName>
    <formula>TEXT(Portfolio__r.Current_Deed_Status__c)</formula>
    <inlineHelpText>This field is reflecting the value that was entered on the Portfolio record.</inlineHelpText>
    <label>Deed Status</label>
    <type>Text</type>
</CustomField>