Custom--app/main/default/objects/Rehab__c/fields/Direct_Vendors__c.field-meta.xml
<CustomField>
    <fullName>Direct_Vendors__c</fullName>
    <label># Direct Vendors</label>
    <summaryForeignKey>Rehab_Vendors__c.Rehab__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>