Custom--app/main/default/objects/Rehab__c/fields/Disposition_Listing_Status__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Listing_Status__c</fullName>
    <label>Disposition Listing Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>