Custom--app/main/default/objects/Rehab__c/fields/Disposition_No__c.field-meta.xml
<CustomField>
    <fullName>Disposition_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disposition No.</label>
    <referenceTo>Disposition__c</referenceTo>
    <relationshipLabel>Rehabs</relationshipLabel>
    <relationshipName>Rehabs</relationshipName>
    <type>Lookup</type>
</CustomField>