Custom--app/main/default/objects/Rehab__c/fields/Disposition_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Strategy__c</fullName>
    <label>Disposition Strategy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>