Custom--app/main/default/objects/Rehab__c/fields/Documents_Sent_to_Village__c.field-meta.xml
<CustomField>
    <fullName>Documents_Sent_to_Village__c</fullName>
    <label>Documents Sent to Village</label>
    <type>Date</type>
</CustomField>