Custom--app/main/default/objects/Rehab__c/fields/Drive_Report_Notes__c.field-meta.xml
<CustomField>
    <fullName>Drive_Report_Notes__c</fullName>
    <inlineHelpText>This field will be auto-populated from the Portfolio record based on notes from the acquisition team.</inlineHelpText>
    <label>Drive Report Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>