Custom--app/main/default/objects/Rehab__c/fields/Earliest_Move_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Move_In_Date__c</fullName>
    <label>Earliest Move-In Date</label>
    <type>Date</type>
</CustomField>