Custom--app/main/default/objects/Rehab__c/fields/Electric_Meter_Number__c.field-meta.xml
<CustomField>
    <fullName>Electric_Meter_Number__c</fullName>
    <formula>Portfolio__r.Residence__r.Electric_Meter_Number__c</formula>
    <label>Electric Meter Number</label>
    <type>Text</type>
</CustomField>