Custom--app/main/default/objects/Rehab__c/fields/Electric_Notes__c.field-meta.xml
<CustomField>
    <fullName>Electric_Notes__c</fullName>
    <formula>Portfolio__r.Residence__r.Electric_Notes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Electric Notes</label>
    <type>Text</type>
</CustomField>