Custom--app/main/default/objects/Rehab__c/fields/Electric_Transfer_Complete__c.field-meta.xml
<CustomField>
    <fullName>Electric_Transfer_Complete__c</fullName>
    <label>Electric Transfer Complete</label>
    <type>Date</type>
</CustomField>