Custom--app/main/default/objects/Rehab__c/fields/Electricity_Provider__c.field-meta.xml
<CustomField>
    <fullName>Electricity_Provider__c</fullName>
    <formula>Portfolio__r.Residence__r.Electricity_Provider__c</formula>
    <label>Electricity Provider</label>
    <type>Text</type>
</CustomField>