Custom--app/main/default/objects/Rehab__c/fields/Expected_Gross_Monthly_Rent_UW__c.field-meta.xml
<CustomField>
    <fullName>Expected_Gross_Monthly_Rent_UW__c</fullName>
    <formula>Portfolio__r.Exp_Gross_Monthly_Rent_UW__c</formula>
    <inlineHelpText>This value auto-populates from the Portfolio record.</inlineHelpText>
    <label>Expected Gross Monthly Rent @ UW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>