Custom--app/main/default/objects/Rehab__c/fields/Expedite_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Expedite_Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expedite Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Rehabs3</relationshipName>
    <type>Lookup</type>
</CustomField>