Custom--app/main/default/objects/Rehab__c/fields/Expedite_Status__c.field-meta.xml
<CustomField>
    <fullName>Expedite_Status__c</fullName>
    <label>Expedite Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>