Custom--app/main/default/objects/Rehab__c/fields/Final_Budget_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Budget_Date__c</fullName>
    <label>Budget Revised Date</label>
    <type>Date</type>
</CustomField>