Custom--app/main/default/objects/Rehab__c/fields/Final_Budget_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Budget_Due_Date__c</fullName>
    <description>All regions should make best efforts to have a final budget within 7 days of the re-key date.</description>
    <formula>Re_Key_Ready_Date__c - 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Budget Due Date</label>
    <type>Date</type>
</CustomField>