Custom--app/main/default/objects/Rehab__c/fields/Final_Inspection_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Inspection_Scheduled_Date__c</fullName>
    <inlineHelpText>This should represent the date that the inspection will occur.  If a second inspection is needed, adjust the final inspection status and then update this field with the date the second inspection is scheduled to occur.</inlineHelpText>
    <label>Final Inspection Scheduled Date</label>
    <type>Date</type>
</CustomField>