Custom--app/main/default/objects/Rehab__c/fields/Final_Inspection_Status__c.field-meta.xml
<CustomField>
    <fullName>Final_Inspection_Status__c</fullName>
    <label>Final Inspection Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Final Inspection # 1 Pending</fullName>
            </value>
            <value>
                <fullName>Fail - Final Inspection # 2 Pending</fullName>
            </value>
            <value>
                <fullName>Fail - Final Inspection # 3 Pending</fullName>
            </value>
            <value>
                <fullName>Fail - Final Inspection # 4 Pending</fullName>
            </value>
            <value>
                <fullName>Fail - Final Inspection # 5 Pending</fullName>
            </value>
            <value>
                <fullName>Fail - Final Inspection # 6 Pending</fullName>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>