Custom--app/main/default/objects/Rehab__c/fields/Final_Punchlist_Received__c.field-meta.xml
<CustomField>
    <fullName>Final_Punchlist_Received__c</fullName>
    <label>Final Punchlist Received</label>
    <type>Date</type>
</CustomField>