Custom--app/main/default/objects/Rehab__c/fields/Front_End_Budget__c.field-meta.xml
<CustomField>
    <fullName>Front_End_Budget__c</fullName>
    <inlineHelpText>This field should auto-populate for regions that are using the HD app.  This number does not include applicable sales tax.</inlineHelpText>
    <label>Front-End Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>