Custom--app/main/default/objects/Rehab__c/fields/Front_End_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Front_End_Supervisor__c</fullName>
    <formula>HD_Budget_Walk__r.Walk_Supervisor__r.Full_Name__c</formula>
    <inlineHelpText>This name comes from the associated HD Budget Walk record.</inlineHelpText>
    <label>Front-End Supervisor</label>
    <type>Text</type>
</CustomField>