Custom--app/main/default/objects/Rehab__c/fields/Gas_Meter_Number__c.field-meta.xml
<CustomField>
    <fullName>Gas_Meter_Number__c</fullName>
    <formula>Portfolio__r.Residence__r.Gas_Meter_Number__c</formula>
    <label>Gas Meter Number</label>
    <type>Text</type>
</CustomField>