Custom--app/main/default/objects/Rehab__c/fields/Gas_Notes__c.field-meta.xml
<CustomField>
    <fullName>Gas_Notes__c</fullName>
    <formula>Portfolio__r.Residence__r.Gas_Notes__c</formula>
    <label>Gas Notes</label>
    <type>Text</type>
</CustomField>