Custom--app/main/default/objects/Rehab__c/fields/Gas_Provider__c.field-meta.xml
<CustomField>
    <fullName>Gas_Provider__c</fullName>
    <formula>Portfolio__r.Residence__r.Gas_Provider__c</formula>
    <label>Gas Provider</label>
    <type>Text</type>
</CustomField>