Custom--app/main/default/objects/Rehab__c/fields/Gas_Status__c.field-meta.xml
<CustomField>
    <fullName>Gas_Status__c</fullName>
    <formula>TEXT( Portfolio__r.Residence__r.Gas_Status__c )</formula>
    <label>Gas Status</label>
    <type>Text</type>
</CustomField>