Custom--app/main/default/objects/Rehab__c/fields/Gas_Transfer_Complete__c.field-meta.xml
<CustomField>
    <fullName>Gas_Transfer_Complete__c</fullName>
    <label>Gas Transfer Complete</label>
    <type>Date</type>
</CustomField>