Custom--app/main/default/objects/Rehab__c/fields/GC_City__c.field-meta.xml
<CustomField>
    <fullName>GC_City__c</fullName>
    <formula>Contact__r.MailingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GC City</label>
    <type>Text</type>
</CustomField>