Custom--app/main/default/objects/Rehab__c/fields/GC_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>GC_Company_Name__c</fullName>
    <formula>SUBSTITUTE(General_Contractor__r.Name, '&amp;', 'and')</formula>
    <label>GC Company_Name</label>
    <type>Text</type>
</CustomField>